<resources>
    <string name="app_name">CarPooling</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="carpooling">CarPooling</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="i_want_to_be_a">I want to be a</string>
    <string name="image_button">image button</string>
    <string name="back">back</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="aaa">aaa</string>
    <string name="aaaa">aaaa</string>
    <string name="logo_photo">logo photo</string>
    <string name="credit_card_number">Credit Card number</string>
    <string name="fullname">FullName</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="telephone_number">Telephone number</string>
    <string name="car_type">Car type</string>
    <string name="driver_s_license_number">Driver\'s license number</string>
    <string name="password_verification">Password Verification</string>
    <string name="sign_up">Sign up</string>
    <string name="age1">Age</string>
    <string name="fullname1">FullName</string>
    <string name="email1">Email</string>
    <string name="username1">Username</string>
    <string name="sign_up1">Sign_up</string>
    <string name="password1">Password</string>
    <string name="bbb1">bbb</string>
    <string name="sign_up_as">Sign up as:</string>
    <string name="driver1">driver</string>
    <string name="passenger1">passenger</string>
    <string name="purple_logo">purple logo</string>

    <string name="todo1">TODO</string>
    <string name="if_you_are_a_driver_fill_in_the_following_boxes">If you are a driver fill in the following boxes .</string>
    <string name="telephone_number1">Telephone number</string>
    <string name="sign_up2">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="cvv">CVV</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="if_you_are_a_passenger_fill_in_the_following_boxes">If you are a passenger fill in the following boxes</string>
    <string name="iban">Iban</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_route">Create new route</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="max_number_of_passenger">Max number of passenger</string>
    <string name="create_route">Create route</string>
    <string name="already_have_created_route_and_don_t_want_to_create_more">Already have created route and don\'t want to create more</string>
    <string name="existed_routes">Existed Routes</string>
    <string name="street">Street</string>
    <string name="street_number">Street Number</string>
    <string name="city">City</string>
    <string name="zipcode">ZipCode</string>
    <string name="title_activity_passenger_front_page" />
    <string name="For_drivers"> If you are a driver complete the following: </string>
    <string name="For_passengers"> If you are a passenger complete the following: </string>
    <string name="pick_up_point"> Pick up point </string>
    <string name="already_have_entered_route_and_don_t_want_to_enter_more" />
    <string name="no_existed_route">no existed route : (</string>
    <string name="completed">Completed</string>
    <string name="already_have_entered_subroute_and_don_t_want_to_enter_more" />
    <string name="show_requests">Show requests</string>
    <string name="show_existed_routes">Show existed routes</string>
    <string name="no_routes_found">No routes found : (</string>
    <string name="search_route">Search route</string>
    <string name="no_available_routes">No available routes</string>
    <string name="rate">0.00</string>
    <string name="request">Request</string>
    <string name="if_you_want_to_be_also_a_driver_complete_the_following">If you want to be also a driver, complete the following :</string>
    <string name="if_you_want_to_be_also_a_passenger_complete_the_following">if you want to be also a passenger, complete the following :</string>
    <string name="show_routes">Show routes</string>
    <string name="create">create</string>
    <string name="no_passengers">No passengers</string>
    <string name="consistency">Consistency</string>
    <string name="reliability">Reliability</string>
    <string name="politeness">Politeness</string>
    <string name="delete">Delete</string>
    <string name="maximum_number_of_passengers">Maximum number of passengers</string>
    <string name="balance">Balance</string>
    <string name="_10">10€</string>
    <string name="_20">20€</string>
    <string name="_50">50€</string>
    <string name="_5">5€</string>
    <string name="wallet">wallet</string>
    <string name="destination1">Destination :</string>
    <string name="date1">Date :</string>
    <string name="rate1">Rate</string>
    <string name="username2">Username :</string>
    <string name="no_existed_routes">No existed routes</string>
    <string name="pick_up_point1">Pick up point</string>
    <string name="date_2024_01_01t18_44_44">Date(2024-01-01T18:44:44)</string>
    <string name="destination12">Destination :</string>
    <string name="pick_up_point12">Pick up point :</string>
    <string name="name1">Name :</string>
    <string name="date12">Date :</string>
    <string name="complete">Complete</string>
    <string name="name3">Name :</string>
    <string name="no_existed_routes1">No existed routes.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="passenger_name">Passenger name:</string>
    <string name="for_route_with">For route with:</string>
    <string name="date11">Date :</string>
    <string name="no_available_requests">No available requests.</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="security">Security</string>
    <string name="star">star</string>
    <string name="statistics">Statistics</string>
    <string name="monthly_total_number_of_routes">Monthly total number of routes</string>
    <string name="yearly_total_number_of_routes">Yearly total number of routes</string>
    <string name="result">result</string>
    <string name="monthly_average_fullness_in_the_routes">Monthly Average fullness in the routes</string>
    <string name="yearly_average_fullness_in_the_routes">Yearly Average fullness in the routes</string>
    <string name="monthly_income">Monthly income</string>
    <string name="yearly_income">Yearly income</string>
    <string name="yearly_expenses">Yearly expenses</string>
    <string name="monthly_expenses">Monthly expenses</string>


</resources>