<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.view.passenger.PassengerFrontPageActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="#6946A6"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/log_out"
            android:layout_width="58dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/back"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/log_out"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.079">


        <ImageButton
            android:id="@+id/Wallet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginEnd="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/wallet"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/wallet"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/RATE"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/rate"
            android:textColor="#271814"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/STAR"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/star"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:src="@drawable/star" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/logo_photo"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:src="@drawable/logo_purple" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="179dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.613">

        <Button
            android:id="@+id/createRouteButton"

            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#6845A5"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/create_route"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/showRoutesButton"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#6845A5"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/show_routes"
            android:textSize="20sp"
            app:cornerRadius="10dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>